--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Xu Liangwei's blog</title>
+    <link rel=”shortcut” href=”./favicon.ico” />
   </head>
 
   <body>
     <app />
-    <script type="text/javascript" src="/bundle.js" charset="utf-8"></script>
+    <script type="text/javascript" src="./bundle.js" charset="utf-8"></script>
   </body>
 </html>
